2004-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable_withfields.[h|cc]: Keep a list of 
	the portals, so we don't have to dynamic_cast the standard children() 
	list so much. Use Bakery::View::remove_view() and delete in 
	remove_all().

2004-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_connection.cc: #included libintl.h to fix build on some 
	systems. Bug 161936 from Mike Castle.

2004-12-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.[h|]cc], and all its derived classes: 
	init_db_details(): Remove the database_name parameter, because we 
	only every use one database now, and it is specified in the connection.
	Also split init_db_details() into init_db_details() and 
	refresh_init_details(), so we can refresh the data without 
	rebuilding the whole structure.
	* glom/mode_data/box_data_list_related.[h|cc]: Added 
	get_relationship().
	* glom/utility_widgets/flowtable_withfields.[h|cc]: Added protected 
	get_portals() to get all the related records portals whose from_key 
	is the specified field. set_field_value(): Look for portals that 
	should refresh when the field value changes, and refresh them.
	Make FlowTableWithFields inherit from View_Composite_Glom, so that 
	it can be a sub-view, so that it can access the document, so that it 
	can get the full Relationship details instead of just the relationship 
	name.

2004-12-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_details.cc: save_to_document(): Set 
	the sequences of top-level groups, so they do not all get the default 
	zero, so that they all get loaded again, without replacing each other.
	* glom/glom.glade: dialog_design_layout: Added an Add Related button.
	Added dialog_choose_relationship.
	* glom/mode_data/treestore_layout.[h|cc]: Change the is_group model 
	column to a enumed type column, so that items can be 1 of more than 
	2 things.
	* glom/mode_data/dialog_layout_details.cc: Use the Add Related button, 